tests/failing/1-forgot_type_import/main.rgo
str: @str
printf: (fmt: str!, args: ..., ok:()) {
    (s: str) = @sprintf(fmt, args)
    @write(s, ok)
}
exit: @exit
foo: (n: int) {  // Error: forgot to import int
    printf("Number\n", exit(0))
}
main: () {
    foo(1)
}
